# micro-harness

./: ARCHITECTURE.md  DIVISION_BUG_DEMO_README.md  README.md  README.zh-CN.md  SUMMARY.md  TEST_SUMMARY.md  buggy_division.py  buggy_division_task.py  buggy_division_task_fixed.py  buggy_division_task_manually_fixed.py  buggy_original.py  comparison_report.md  comprehensive_fix.py  debug_dangerous.py  division_bug.py  division_bug_example.py  division_bug_example2.py  division_bug_fixed.py  division_bug_fixed_example.py  division_workflow_demo.py  enhanced_finder.py  find_bugs.py  find_division_bugs.py  find_division_bugs_task.py  find_fix_bug.py  fix_division_bugs.py  fix_division_bugs_task.py  harness_comparison_report.md  literal_bug.py  pyproject.toml  run_all_critic_tests.py  simple_demo.py  test_all_harnesses.py  test_all_tools_quick.py  test_bash_change.py  test_bash_change2.py  test_critic.py  test_critic_check.py  test_critic_complete.py  test_critic_complete_coverage.py  (+25 more)
benchmarks/: 7model_battle.json  deepseek_results.json  gemini_results.json  hard_results.json  realworld_results.json  realworld_routed.json  reliability_results.json  round1_results.json  round2_results.json  round5_reliability.json  run_benchmark.py  run_gemini_benchmark.py  test_offline.py
examples/: finfars.py  lawfars.py  quickstart.py  sample-finfars-AAPL.md  sample-lawfars-crypto.md
micro_harness/: gemini_backend.py  line_tools.py  openai_backend.py  router.py  verify.py
src/: dual_agent_harness.py  gemini_harness.py  harness.py  hybrid_harness.py  openai_harness.py  rate_limiter.py
(+3 files in other folders)
