[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micro-harness"
version = "0.2.0"
description = "Minimal agent harness (~400 LOC) with 7-model benchmarks and honest failure documentation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "wang2-lat"}]
keywords = ["agent", "harness", "llm", "benchmark", "claude-code", "deepseek", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]

dependencies = ["openai>=1.0"]

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
anthropic = ["anthropic>=0.50"]
all = ["google-genai>=1.0", "anthropic>=0.50"]

[project.scripts]
mh = "micro_harness.cli:main"

[project.urls]
Homepage = "https://github.com/wang2-lat/micro-harness"

[tool.setuptools.packages.find]
where = ["."]
include = ["micro_harness*"]
